--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", features= ["concurrent","testing"] }
 miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main" }
 miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", version = "0.1", default-features = false  }
+
+[build-dependencies]
+miden-assembly = { git = "https://github.com/0xPolygonMiden/miden-vm.git", branch = "main" }
