--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+uuid = { version = "1.6.1", features = ["serde", "v4"], optional = true }
 miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", features= ["concurrent","testing"] }
 miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main" }
 miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", version = "0.1", default-features = false  }
