--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -9,11 +9,11 @@ edition = "2021"
 uuid = { version = "1.6.1", features = ["serde", "v4"], optional = true }
 figment = { version = "0.10", features = ["toml", "env"] }
 rand = { version = "0.8.5" }
-miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", features= ["concurrent","testing"] }
-miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main" }
-# miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", version = "0.1", features = ["serde"]   }
-miden-client = { git = "https://github.com/0xPolygonMiden/miden-client.git", branch = "main", version = "0.1.0", features= ["concurrent","testing"] }
-miden-objects = { version = "0.1", features = ["serde"] }
+miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", version = "0.2.0", features= ["concurrent","testing"] }
+miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", version = "0.2.0" }
+# miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", version = "0.2", features = ["serde"]   }
+miden-client = { git = "https://github.com/0xPolygonMiden/miden-client.git", branch = "main", version = "0.2.0", features= ["concurrent","testing"] }
+miden-objects = { version = "0.2.0", features = ["serde"] }
 
 [dev-dependencies]
 
