--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -15,11 +15,11 @@ strum_macros = "^0.24"
 strum = { version = "^0.24", features = ["derive"] }
 derive_more = "^0.99"
 aze-lib = { path = "../lib" }
-miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", features= ["concurrent","testing"] }
-miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main" }
+miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", version = "0.2", features= ["concurrent","testing"] }
+miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", version = "0.2" }
 # miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", version = "0.1", default-features = false  }
-miden-client = { git = "https://github.com/0xPolygonMiden/miden-client.git", branch = "main", version = "0.1.0", features= ["concurrent","testing"] }
-miden-objects = { version = "0.1", features = ["serde"] }
+miden-client = { git = "https://github.com/0xPolygonMiden/miden-client.git", branch = "main", version = "0.2.0", features= ["concurrent","testing"] }
+miden-objects = { version = "0.2", features = ["serde"] }
 
 [build-dependencies]
 miden-assembly = { git = "https://github.com/0xPolygonMiden/miden-vm.git", branch = "main" }
