--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "server"
+name = "aze-server"
 version = "0.1.0"
 edition = "2021"
 
@@ -20,6 +20,7 @@ strum = { version = "^0.24", features = ["derive"] }
 derive_more = "^0.99"
 tokio = { version = "1.29", features = ["rt-multi-thread", "net", "macros"] }
 aze-lib = { path = "../lib" }
+aze-types = { path = "../types" }
 miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", version = "0.2", features= ["concurrent","testing"] }
 miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", version = "0.2" }
 # miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", version = "0.1", default-features = false  }
