--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -10,11 +10,11 @@ uuid = { version = "1.6.1", features = ["serde", "v4"], optional = true }
 figment = { version = "0.10", features = ["toml", "env"] }
 rand = { version = "0.8.5" }
 miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", version = "0.2.0", features= ["concurrent","testing"] }
-miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", version = "0.2.0" }
+# miden-tx = { version = "0.2.0", default-features = false }
+miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", version = "0.2.3", default-features = false }
 # miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", version = "0.2", features = ["serde"]   }
-miden-client = { git = "https://github.com/0xPolygonMiden/miden-client.git", branch = "main", version = "0.2.0", features= ["concurrent","testing"] }
-miden-objects = { version = "0.2.0", features = ["serde"] }
-
+miden-client = { git = "https://github.com/0xPolygonMiden/miden-client.git", branch = "main", features= ["concurrent","testing"] }
+miden-objects = { version = "0.2", default-features = false }
 [dev-dependencies]
 
 [build-dependencies]
