--- a/.github/workflows/run-integration-tests.yml
+++ b/.github/workflows/run-integration-tests.yml
@@ -14,12 +14,26 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Checkout server repo code
+        uses: actions/checkout@v3
+        with:
+          repository: 'RizeLabs/miden-node'
+          path: 'miden-node'
+
       - name: Set up Rust
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           profile: minimal
           override: true
+
+      - name: Start miden node # start local miden node
+        run: |
+          cd miden-node
+          cargo install --features testing --path bin/node # install miden-node binary
+          cd bin/node
+          miden-node make-genesis --force
+          miden-node start node
 
       - name: Run tests
         run: cargo test --release
