--- a/node/miden-client.toml
+++ b/node/miden-client.toml
@@ -1,5 +1,6 @@
 [rpc]
 endpoint = { protocol = "http", host = "localhost", port = 57291 }
+# endpoint = { protocol = "http", host = "54.246.203.33", port = 57291 }
 
 [store]
-database_filepath = "/tmp/d.sqlite3"
+database_filepath = "store.sqlite3"
