--- a/.github/workflows/run-integration-tests.yml
+++ b/.github/workflows/run-integration-tests.yml
@@ -36,5 +36,5 @@ jobs:
           miden-node start node &
 
       - name: Run tests
-        run: cargo test --release -- --nocapture
+        run: cargo test --release -- --test-threads 1 --nocapture
 
