--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -15,6 +15,8 @@ miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = 
 # miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base.git", branch = "main", version = "0.2", features = ["serde"]   }
 miden-client = { git = "https://github.com/0xPolygonMiden/miden-client.git", branch = "main", features= ["concurrent","testing"] }
 miden-objects = { version = "0.2", default-features = false }
+aze-types = { path = "../types" }
+
 [dev-dependencies]
 
 [build-dependencies]
