--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -9,6 +9,10 @@ edition = "2021"
 name = "integration"
 path = "tests/integration/main.rs"
 
+[[test]]
+name = "e2e"
+path = "tests/e2e/test_basic_e2e.rs"
+
 [dependencies]
 actix-web = "^4"
 uuid = { version = "1.6.1", features = ["serde", "v4"], optional = true }
