Enable workflow to run test on develop as well

--- a/.github/workflows/run-integration-tests.yml
+++ b/.github/workflows/run-integration-tests.yml
@@ -3,7 +3,8 @@ name: Run Aze integration Tests on PR
 on:
   pull_request:
     branches:
-      - main  
+      - main
+      - develop
 
 jobs:
   test:
