--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -14,6 +14,7 @@ name = "e2e"
 path = "tests/e2e/test_basic_e2e.rs"
 
 [dependencies]
+ansi_term = "0.12.1"
 actix-web = "^4"
 uuid = { version = "1.6.1", features = ["serde", "v4"], optional = true }
 serde = { version = "^1", features = ["derive"] }
